[gd_scene load_steps=2 format=3 uid="uid://c6wdeexi7g2f5"]

[ext_resource type="Script" path="res://scripts/ui/popups/CombatUI.gd" id="1_ff2de"]

[node name="CombatUI" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 0.752941)
script = ExtResource("1_ff2de")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StatsHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayerStats" type="VBoxContainer" parent="VBoxContainer/StatsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer/StatsHBox/PlayerStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Giocatore"
horizontal_alignment = 1

[node name="PlayerHPLabel" type="Label" parent="VBoxContainer/StatsHBox/PlayerStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "HP: 100 / 100"
horizontal_alignment = 1

[node name="VSLabel" type="Label" parent="VBoxContainer/StatsHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VS"
vertical_alignment = 1

[node name="EnemyStats" type="VBoxContainer" parent="VBoxContainer/StatsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="EnemyNameLabel" type="Label" parent="VBoxContainer/StatsHBox/EnemyStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Nemico"
horizontal_alignment = 1

[node name="EnemyHPLabel" type="Label" parent="VBoxContainer/StatsHBox/EnemyStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "HP: 10 / 10"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CombatLog" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Inizia il combattimento!"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AttackButton" type="Button" parent="VBoxContainer/ActionsHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Attacca"

[node name="UseItemButton" type="Button" parent="VBoxContainer/ActionsHBox"]
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 22
text = "Usa Oggetto"

[node name="FleeButton" type="Button" parent="VBoxContainer/ActionsHBox"]
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 22
text = "Fuggi"

[connection signal="pressed" from="VBoxContainer/ActionsHBox/AttackButton" to="." method="_on_attack_button_pressed"]
